Added hybrid algorithm discussion, removed most of the semi-formal interface section. Tightened up some other sections.

--- a/rv2015/rv2015_main.tex
+++ b/rv2015/rv2015_main.tex
@@ -61,8 +61,8 @@
 \title{Runtime Monitoring for Safety-Critical Embedded Systems}
 
 
-\author{Aaron Kane \and Omar Chowdhury \and Philip Koopman}
-\institute{Carnegie Mellon University, Pittsburgh, PA\\ \email{akane@cmu.edu, koopman@cmu.edu}}
+\author{Aaron Kane \and Omar Chowdhury \and Anupam Datta \and Philip Koopman}
+\institute{Carnegie Mellon University, Pittsburgh, PA\\ \email{akane@cmu.edu, koopman@cmu.edu, danupam@cmu.edu, }}
 
 
 
