Started algorithm section rewrite, ~3/4 way through

--- a/rv2015/rv2015_main.tex
+++ b/rv2015/rv2015_main.tex
@@ -36,6 +36,10 @@
 %\usepackage{setspace}
 %\doublespace
 \usepackage{algorithmic}
+%%% Omar based packages
+\usepackage{ltlfonts}	
+\usepackage{mathtools}
+\usepackage{xspace}
 
 
 % proof/theorem stuff
@@ -71,6 +75,7 @@
 % make the title area
 \maketitle
 
+\input{command}
 
 \begin{abstract}
 The trend towards increasing commercial-off-the-shelf (COTS) components in complex safety-critical systems is increasing the difficulty of verifying system correctness. 
